commonConfig/postgres-deploy-config.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: postgres-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql
              subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim 
---
apiVersion: v1
kind: Service
metadata: 
  name: postgres-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
